Changed properties settings

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
 spring.application.name=habitapp
-spring.datasource.url = jdbc:postgresql://localhost:5432/HabitApp
-spring.datasource.username=postgres
-spring.datasource.password=tera123
+spring.config.import=env.properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
